[gd_scene load_steps=13 format=3 uid="uid://u572i2k7of0k"]

[ext_resource type="Script" path="res://Entities/entities_script/enemy_3.gd" id="1_jnryr"]
[ext_resource type="Texture2D" uid="uid://ftray4rf3ib3" path="res://Sprites/Demon-2-Sheet_dual.png" id="2_0iswo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpqmg"]
radius = 6.0
height = 18.0

[sub_resource type="Animation" id="Animation_hesrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5iob7"]
resource_name = "dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(6, 1), Vector2i(6, 0), Vector2i(6, 2), Vector2i(6, 4), Vector2i(6, 3), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_xowxd"]
resource_name = "run_left"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(10, 1), Vector2i(10, 2), Vector2i(10, 4), Vector2i(10, 1), Vector2i(10, 2), Vector2i(10, 1), Vector2i(10, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_vjurq"]
resource_name = "run_right"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 1), Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_ou82f"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(10, 1), Vector2i(10, 2), Vector2i(10, 1), Vector2i(10, 2), Vector2i(10, 1), Vector2i(10, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_slfal"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 1), Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtkuh"]
_data = {
"RESET": SubResource("Animation_hesrf"),
"dead": SubResource("Animation_5iob7"),
"run_left": SubResource("Animation_xowxd"),
"run_right": SubResource("Animation_vjurq"),
"walk_left": SubResource("Animation_ou82f"),
"walk_right": SubResource("Animation_slfal")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qdkj6"]
radius = 6.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sx81m"]

[node name="enemy_3" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_jnryr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_0iswo")
hframes = 12
vframes = 6
frame = 24

[node name="enemy_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_kpqmg")
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wtkuh")
}

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 32
collision_mask = 3

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -3)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_qdkj6")
debug_color = Color(0.431373, 0.541176, 0.709804, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="chase_box" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="chase_box"]
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_sx81m")
debug_color = Color(0.615686, 0.529412, 0.223529, 0.419608)

[node name="freeze_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="death_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="chase_box" to="." method="_on_chase_box_area_entered"]
[connection signal="timeout" from="freeze_timer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
